# viz-art

./: .gitignore  CLAUDE.md  INTEGRATION_PATCH.md  OUTPUTSAVER_ROADMAP.md  OUTPUT_SAVER_INTEGRATION.md  README.md  REQUIREMENTS.md  implementation.md  main.py  pyproject.toml  sample-presentation.pptx  sbsp-assembly.pptx
.github/workflows/: test.yml
examples/: README.md  config_pipeline.py  demo_batch_with_phase3.py  demo_complete_pipeline.py  demo_comprehensive.py  demo_simple.py  simple_pipeline.py  single_stage_pipeline.py  stage_validation_demo.py  test_batch_thumbnails.py  test_pointcloud_batch.py  test_projection.py  test_stage_outputs.py  test_validation.py  test_visualization.py  three_stage_pipeline.py
examples/calibration/: camera.yaml
examples/configs/: batch_pointclouds.yaml  full_observability.yaml  multimodal_stages.yaml  pointcloud_simple.yaml  profiling_enabled.yaml  simple_pipeline.yaml  three_stage_pipeline.yaml  validation_strict.yaml
examples/data/: cloud_000.npy  cloud_001.npy  cloud_002.npy  create_sample_data.py
examples/phase3/: example_full_stack.py  example_historical_metrics.py  example_logging.py  example_profiling.py  example_validation.py
examples/stages/: grayscale_stage.py  image_loader.py  image_resizer.py  multimodal_loader.py  pointcloud_loader.py  pointcloud_projection.py  pointcloud_thumbnail.py  pointcloud_validation.py  pointcloud_visualization.py  simple_filter.py
examples/test_batch/: README.md  batch_config.yaml  create_test_images.py  run_batch_test.py
examples/test_pointcloud_batch/: pointcloud_batch_config.yaml  run_pointcloud_batch.py
scripts/: batch_process.py
specs/001-base-pipeline-arch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multimodal-viz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multimodal-viz-phase3/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-accuracy-tracking-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/viz_art/: __init__.py
tests/: conftest.py  create_test_image.py
tests/error_analysis/: test_patterns.py  test_visualizer.py
tests/fixtures/: sample_audit_logs.json
(+98 files in other folders)
